UI alignment fix

--- a/frontend/src/components/UrlShortnerUser/UrlShortnerUser.css
+++ b/frontend/src/components/UrlShortnerUser/UrlShortnerUser.css
@@ -139,6 +139,8 @@
 }
 .delete-icon {
   margin-left: auto;
+  display: flex;
+  align-items: center;
   img {
     transition: all 0.4s cubic-bezier(0.68, -0.85, 0.27, 1.85);
     will-change: transform;
@@ -193,6 +195,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  max-width: 85%;
   gap: 4px;
   align-self: center;
   text-align: left;
@@ -221,6 +224,7 @@
   .original-url {
     opacity: 0.7;
     color: #a1a1aa;
+    word-wrap: break-word;
   }
 }
 .progress {
